# xqclog

./: .gitignore  LICENSE  README.md  logging.yaml.example  pyproject.toml
examples/: advanced_usage.py  alert_usage.py  basic_usage.py  demo_alert_notifiers.py  logging_alert.yaml  logging_basic.yaml  logging_production.yaml  logging_web.yaml  production_example.py
xqclog/: __init__.py  alerts.py  config.py  decorators.py  logger.py  presets.py
xqclog/alerts/: __init__.py  base.py  dingtalk.py  email.py  manager.py  registry.py  weixin_app.py  weixin_webhook.py
